Changes from 3.0.0 to 3.0.1
---------------------------

** Bug

** Improvement
    * Removed root changelog.txt
    * [FELIX-2954 ] - annotated component factory does not allow to provide a component instance explicitly

Initial Release 3.0.0
---------------------

** Bug

** Improvement